--- a/package.json
+++ b/package.json
@@ -5,16 +5,59 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder",
+    "dist": "electron-builder --publish=never",
+    "release": "electron-builder --publish=always"
+  },
+  "build": {
+    "appId": "com.ct02.secura",
+    "productName": "Secura Auth",
+    "files": [
+      "dist/**/*",
+      "assets/**/*",
+      "index.html",
+      "index.js",
+      "preload.js",
+      "renderer.js",
+      "style.css",
+      "package.json"
+    ],
+    "directories": {
+      "output": "dist"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "ct02k",
+      "repo": "secura"
+    },
+    "mac": {
+      "category": "public.app-category.utilities"
+    },
+    "linux": {
+      "category": "Utility"
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ]
+    }
   },
   "keywords": [],
   "author": "CT02",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "electron": "37.0.0"
+    "electron": "37.1.0",
+    "electron-builder": "26.0.17"
   },
   "dependencies": {
-    "otplib": "^12.0.1"
+    "otplib": "^12.0.1",
+    "electron-updater": "6.6.5"
   }
 }
