--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "secura",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple TOTP authenticator app built with Electron",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,6 +13,7 @@
   "build": {
     "appId": "com.ct02.secura",
     "productName": "Secura Auth",
+    "icon": "assets/icon.png",
     "files": [
       "dist/**/*",
       "assets/**/*",
@@ -32,18 +33,25 @@
       "repo": "secura"
     },
     "mac": {
-      "category": "public.app-category.utilities"
+      "category": "public.app-category.utilities",
+      "icon": "assets/icon.png"
     },
     "linux": {
-      "category": "Utility"
+      "category": "Utility",
+      "icon": "assets/icon.png",
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": ["x64"]
+        }
+      ]
     },
     "win": {
+      "icon": "assets/icon.png",
       "target": [
         {
           "target": "nsis",
-          "arch": [
-            "x64"
-          ]
+          "arch": ["x64"]
         }
       ]
     }
